--- a/src/main/resources/org/example/miraireader/library-view.fxml
+++ b/src/main/resources/org/example/miraireader/library-view.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <BorderPane fx:id="mainContainer" xmlns:fx="http://javafx.com/fxml"
             fx:controller="org.example.miraireader.gui.LibraryController">
   <top>
@@ -16,6 +17,6 @@
   </top>
 
   <center>
-    <AnchorPane fx:id="bookContainer" minHeight="0" minWidth="0"/>
+    <HBox fx:id="bookContainer" minHeight="0" minWidth="0"/>
   </center>
 </BorderPane>
